--- a/Thesis/thesis-packages.tex
+++ b/Thesis/thesis-packages.tex
@@ -65,7 +65,7 @@
      linkcolor = documentLinkColor,
      urlcolor = documentLinkColor,
 }
-
+\usepackage{listings}
 % Enable capitalized references. Use this last.
 \usepackage[nameinlink]{cleveref}
 
