--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -188,27 +188,6 @@ A high level breakdown of the framework is provided below.
 \subsection{Tap Onset Hardware}    \label{tap_arduino}
 \todo[inline]{fill out section}
 
-\subsection{Latency Evaluation} \label{latencyCalc}
-Overall strategy to minimize delay maximize accuracy/precision
-\todo[inline]{fill out section}
-Sources of potential error:
-
-    *FTDI/USB -> Pro Trinket (16MHz) --> Laptop
-
-    *USB -> Arduino -> Laptop
-
-    *Serial write to haptic to motor spin up
-
-    *FSR analog read/mentioned debounce
-
-    *python thread time
-
-    Evaluation with scope:
-
-    human input is never perfect, above the noise floor but just enough to get the input
-
-    intrinsic jitter when that many asynchronous processes together
-
 \subsection{Setup} \label{testSetup}
 To initialize setup, the subject is seated and given a pair of closed-back headphones. The FSR is situated to their preference, either dominant or non-dominant hand, and secured into place. Unlike a keyboard or button the FSR gives little to no feedback or rebound. This ensures a confident tap on each onset while providing no tactile response. The approach seeks to avoid intrinsic lag due to its independence of mechanical components. The delay limit is defined by the threshold applied in the software to avoid debounce, as discussed in Section \ref{development}
 
@@ -227,3 +206,38 @@ The Python file \textit{testSuite.py} is run and the UI will prompt the subject 
     \caption{Test Case Feedback Example}
     \label{fig:TestCaseFeedbackEx}
 \end{figure}
+
+\subsection{Latency Evaluation} \label{latencyCalc}
+Significant effort was placed in determining the overall latency of the test system to instill a level of confidence in the validity and accuracy of the data points acquired. The sources of potential latency were isolated into the components identified below.
+\begin{itemize}
+    \item FTDI-USB Communication
+    \begin{itemize}
+        \item According to section 3.1 of the datasheet for FTDI based chipsets\footnote{\url{http://www.ftdichip.com/Support/Documents/AppNotes/AN232B-04_DataLatencyFlow.pdf}} , FTDI USB-Serial communication to PC exhibits by default a round trip delay of 16 ms intrinsic to the packet scheduler. When the latency timer expires and the buffer is not yet full any data in the 62 byte buffer is sent along with a short 2 byte status message (total of 64 bytes).
+    \end{itemize}
+    \item USB $->$ Arduino Uno $->$ Laptop
+    \item 50 ms vibrotactile motor ramp up time (see Appendix)
+    \item Pro Trinket Haptic Onset Trigger Message (True Onset) $->$ PC $<-$ Tap Onset
+    \begin{itemize}
+        \item In order to quantify latency within the haptic design tests were repeatedly run within a closed loop environment. This meant that the onset trigger I/O pin at the gate node of the Pro Trinket was connected to the A0 pin on the Arduino Uno, emulating the same effect as a tap of the FSR.
+        \item Force Sensitive Resistor
+            * analog read/mention debounce threshold
+            * transmit time
+                * human input is never perfect, above the noise floor but just enough to get the input
+        \item Constant offset:  
+            * Within the haptic codes dual states of operation there exists two sources of error within the state machine. 
+                * The onset trigger in discrete mode starting $1/4$ of a period after 
+        \begin{lstlisting}[language=C]
+            if((millis()-startTime) >= ((average * 1)/4))
+            {
+                newState++;
+                Serial.println("onset");
+            }
+        \end{lstlisting}
+    \end{itemize}
+    \item Audio engine playback
+    \item python thread time
+        * intrinsic jitter when that many asynchronous processes together
+        * File I/O
+\end{itemize}
+The overall summation was applied to each data point in the final analysis.
+
